# rag-t5-maxlora

./: Makefile  main (65).tex  pyproject.toml
configs/: defaults.toml
data/processed/: alpaca_train.jsonl  alpaca_valid.jsonl
data/raw/: test.txt
doc/: gloss.tex  readme.tex
scripts/: compare_lora_models.py  run_gradio.sh  train_variant.sh
src/apps/: gradio_chat.py
src/cli/: chunk.py  gen_synth.py  generate.py  ingest.py  smoke_model.py  train.py
src/data/: prepare_alpaca.py  prepare_sst2.py
src/eval/: eval_instruction.py  eval_sst2.py
src/rag_t5/: config.py  prompt.py
src/rag_t5/data/: __init__.py  chunk.py  ingest.py
src/rag_t5/models/: loader.py  lora.py
src/rag_t5/train/: __init__.py  branching.py  trainer.py
src/rag_t5/utils/: io.py
src/train/: common.py  variant_middle_ft.py  variant_qlora_middle.py  variant_tiny_baseline.py
synth/: __init__.py  gen_qa_offline.py
