[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-t5-maxlora"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "transformers>=4.41",
  "peft>=0.12",
  "typer>=0.9",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
smoke-model = "cli.smoke_model:app"
train-model = "cli.train:app"
